Removed livejs and fixed banner z-index.

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,7 @@ ul {
   height: 40px;
   display: flex;
   align-items: center;
+  z-index: 10;
 }
 .warning-banner span {
   margin-left: 20px;
